--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -12,10 +12,10 @@ print_info() {
     info "Shell" shell
     #info "Resolution" resolution
     info "DE" de
-    info "WM" wm
+    #info "WM" wm
     info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
+    #info "Theme" theme
+    #info "Icons" icons
     info "Terminal" term
     info "Terminal Font" term_font
     info "CPU" cpu
@@ -34,7 +34,7 @@ print_info() {
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
 
-    #info cols
+    info cols
 }
 
 # Title
@@ -760,7 +760,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+ascii_distro="Arcolinux_small"
 
 # Ascii Colors
 #
