--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -211,39 +211,39 @@ font:
   # effect.
   #use_thin_strokes: true
 
-# Base16 Default Dark - alacritty color config
+# Colors (Base16 Default Dark)
 colors:
   # Default colors
   primary:
-    background: '#181818'
-    foreground: '#d8d8d8'
+    background: '0x181818'
+    foreground: '0xd8d8d8'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '#181818'
-    cursor: '#d8d8d8'
+    text: '0xd8d8d8'
+    cursor: '0xd8d8d8'
 
   # Normal colors
   normal:
-    black:   '#181818'
-    red:     '#ab4642'
-    green:   '#a1b56c'
-    yellow:  '#f7ca88'
-    blue:    '#7cafc2'
-    magenta: '#ba8baf'
-    cyan:    '#86c1b9'
-    white:   '#d8d8d8'
+    black:   '0x181818'
+    red:     '0xab4642'
+    green:   '0xa1b56c'
+    yellow:  '0xf7ca88'
+    blue:    '0x7cafc2'
+    magenta: '0xba8baf'
+    cyan:    '0x86c1b9'
+    white:   '0xd8d8d8'
 
   # Bright colors
   bright:
-    black:   '#585858'
-    red:     '#dc9656'
-    green:   '#282828'
-    yellow:  '#383838'
-    blue:    '#b8b8b8'
-    magenta: '#e8e8e8'
-    cyan:    '#a16946'
-    white:   '#f8f8f8'
+    black:   '0x585858'
+    red:     '0xab4642'
+    green:   '0xa1b56c'
+    yellow:  '0xf7ca88'
+    blue:    '0x7cafc2'
+    magenta: '0xba8baf'
+    cyan:    '0x86c1b9'
+    white:   '0xf8f8f8'
 
 draw_bold_text_with_bright_colors: false
 
